--- a/ProjectMobileMirante.dproj
+++ b/ProjectMobileMirante.dproj
@@ -382,6 +382,11 @@
             <Form>frmCadastroMobile</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="Unit1bd.pas">
+            <Form>DataModule1</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
